camo-derive/tests/cases/trait_object.stderr
error: `camo` does not support this type
 --> tests/cases/trait_object.rs:5:8
  |
5 |     x: dyn std::fmt::Debug,
  |        ^^^
